@@ -29,3 +29,13 @@ body {
 .freecodecamp-logo {
   height: 50px;
 }
+
+.contenedor-principal {
+  height: 550px;
+  min-width: 600px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
